# apt

./: apt-0.5.15lorg2-alt53.4.0.e2k.1.patch  apt-0.5.15lorg2-alt53.5.M80C.1.patch  apt-0.5.15lorg2-lorg-cache-limit.patch  apt.be.po  apt.ru.po  apt.spec  configure.ac  notes-mem.md  test-pk-in-hsh.sh
apt/: configure.in
apt-pkg/: Makefile.am  acquire-item.cc  acquire-item.h  acquire-method.cc  acquire-method.h  acquire-worker.h  acquire.cc  acquire.h  algorithms.cc  algorithms.h  cachefile.cc  cachefile.h  cacheiterators.h  clean.cc  clean.h  depcache.cc  depcache.h  indexfile.h  luaiface.cc  luaiface.h  orderlist.h  packagemanager.h  pkgcache.cc  pkgcache.h  pkgcachegen.cc  pkgcachegen.h  pkgrecords.cc  pkgrecords.h  pkgsystem.h  policy.cc  policy.h  repository.cc  repository.h  sourcelist.h  srcrecords.h  tagfile.cc  tagfile.h  update.cc  version.h
apt-pkg/contrib/: arithutl.h  cdromutl.cc  cmndline.h  configuration.cc  configuration.h  error.cc  error.h  fileutl.cc  fileutl.h  fileutl_opt.h  hashes.cc  hashes.h  md5.h  mmap.cc  mmap.h  progress.h  rhash.cc  rhash.h  sha1.h  sptr.h  strutl.cc  strutl.h  system.h
apt-pkg/rpm/: rpmhandler.cc  rpmhandler.h  rpmindexfile.cc  rpmindexfile.h  rpmpm.cc  (+10 more)
buildlib/: apti18n.h  archtable
cmdline/: Makefile.am  apt-cache.cc  apt-get.cc  apt-shell.cc  indexcopy.cc  indexcopy.h  rpmindexcopy.cc
doc/: apt-get.8.sgml
m4/: warn_lang_flags.m4
methods/: Makefile.am  copy.cc  file.cc  ftp.cc  ftp.h  gpg.cc  gzip.cc  http.cc  http.h  rsh.cc  rsh.h  rsync-method.h  rsync.cc
tests-under-pkdirect/: 030-search-by-file.xfail
(+124 files in other folders)
